--- a/BenTeensyTest/test/README
+++ b/BenTeensyTest/test/README
@@ -1,11 +1,9 @@
+DOCUMENTATION:
 
-This directory is intended for PlatformIO Test Runner and project tests.
 
-Unit Testing is a software testing method by which individual units of
-source code, sets of one or more MCU program modules together with associated
-control data, usage procedures, and operating procedures, are tested to
-determine whether they are fit for use. Unit testing finds problems early
-in the development cycle.
+Using Vscode, install platformio extension.
 
-More information about PlatformIO Unit Testing:
-- https://docs.platformio.org/en/latest/advanced/unit-testing/index.html
+then, open SPECIFICALLY the benteensytest folder!!! 
+        THIS IS THE PLATFORMIO PROJECT.
+        If you don't follow this warning vscode WILL try to open the entire branch as a project.
+        thank you
